--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,8 @@
+#Eureka server address
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Actuator URL
+spring.boot.admin.client.url=http://localhost:9999
+
+#To activate actuator
+management.endpoints.web.exposure.include=*
